ecmascript/parser/tests/test262-error-references/fail/a79b044230246e2c.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/a79b044230246e2c.js:2:13
  |
2 |     function({[yield 3]: y}) {}
  |             ^

